syntax = "proto3";

message StockInfoRequest {
    string stockname = 1;
    int64 start = 2;
    int64 end = 3;
    int32 resolution = 4; 
}

message Indicator {
    float value = 1;
    int64 timestamp = 2;
}

message StockInfoResponse {
    string stockname = 1;
    repeated Indicator PriceData = 2;
    repeated Indicator VolumeData = 3;    
    repeated Indicator MacdData = 4;    //Multiple Average Convergence Divergence Index
    repeated Indicator RsiData = 5;     //Relative Strength Index data
    repeated Indicator CciData = 6;     //Commodity Channel Index
}

service StockInfoService {
    rpc StockInfo(StockInfoRequest) returns (StockInfoResponse) {}
}